Build 39: Includes EWD-Lite

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { "name" : "ewdgateway2"
-, "description" : "Node.js-based EWD Gateway for Cache and GT.M"
-, "version" : "0.33.2"
+, "description" : "Node.js-based EWD Gateway for Cache, GlobalsDB and GT.M"
+, "version" : "0.39.1"
 , "author" : "Rob Tweed <rtweed@mgateway.com>"
 , "repository" :
   { "type" : "git"
