--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
-{ "name" : "ewdgateway2"
-, "description" : "Node.js-based EWD Gateway for Cache, GlobalsDB and GT.M"
-, "version" : "0.40.1"
-, "author" : "Rob Tweed <rtweed@mgateway.com>"
-, "repository" :
-  { "type" : "git"
-  , "url" : "git://github.com/robtweed/ewdGateway2.git"
-  }
-, "bugs" : { "web" : "http://github.com/robtweed/ewdGateway2/issues" }
-, "os" : [ "any" ]
-, "directories" : { "lib" : "./lib/" }
-, "main" : "./lib/ewdGateway2.js"
-, "engines" : { "node" : ">=0.2.2" }
-, "dependencies" : {}
-, "licenses": [ "Apache" ]
+{ "name": "ewdgateway2", 
+  "description": "Node.js-based EWD Gateway for Cache, GlobalsDB and GT.M", 
+   "version": "0.40.3", 
+   "author": "Rob Tweed <rtweed@mgateway.com>", 
+   "repository": { 
+     "type": "git", 
+     "url": "git://github.com/robtweed/ewdGateway2.git"
+   }, 
+   "bugs": { "web" : "http://github.com/robtweed/ewdGateway2/issues" }, 
+   "os": [ "any" ],
+   "directories": { 
+     "lib" : "./lib/" 
+   }, 
+   "main": "./lib/ewdGateway2.js", 
+   "engines": { "node" : ">=0.2.2" }, 
+   "dependencies": {
+     "socket.io": "~0.9.6"
+   }, 
+   "licenses": [ "Apache" ]
 }
