--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { "name": "ewdgateway2", 
-  "description": "Node.js-based EWD Gateway for Cache, GlobalsDB and GT.M: Includes EWD.js", 
-   "version": "0.49.4", 
+  "description": "Node.js-based EWD Gateway for MongoDB, Cache, GlobalsDB and GT.M: Includes EWD.js", 
+   "version": "0.50.1", 
    "author": "Rob Tweed <rtweed@mgateway.com>", 
    "repository": { 
      "type": "git", 
